# nKernel

./: .gitmodules  readme.md
poc/: CMakeLists.txt  compile_commands.json  test.sh
poc/src/: entry.cpp  etl_profile.h
src/arch/: switch.hpp
src/arch/userland/: entry.cpp  readme.md
src/arch/x86_64/memory/: gdt.hpp  paging.cpp  paging.hpp
src/ipc/: ipc.hpp
src/memory/: check.hpp  heap.cpp  map.hpp  part.hpp  todo.txt
src/process/: process.cpp
src/syscalls/: files.cpp  files.hpp  ipc.cpp  ipc.hpp  syscalls.hpp
src/threads/: scheduler.cpp  scheduler.hpp  thread.cpp  thread.hpp
src/utils/cpplib/: process_item
src/utils/elf/: elf.hpp
src/utils/libk/include/: string.h
src/utils/libk/src/malloc/: heap.cpp  malloc.cpp
src/utils/libk/src/string/: memccpy.cpp  memcpy.cpp  memmove.cpp  memset.cpp
